--- a/appsscript.json
+++ b/appsscript.json
@@ -1,10 +1,14 @@
 {
-  "timeZone": "America/Mexico_City",
+  "timeZone": "Europe/London",
   "dependencies": {
     "libraries": [{
-      "userSymbol": "PL",
-      "libraryId": "1y9ackD7MdSsUkiGd1Au7DvkAgYRn7vkraabnwv12WvIj9YEK1579k48F",
-      "version": "12"
+      "userSymbol": "Assert",
+      "libraryId": "1R-rxUHuQU0ez95FlZz9fxqifbYFszHnukqzv_3Uk5zM3eG4eRBrh_E1M",
+      "version": "15"
+    }, {
+      "userSymbol": "BBLog",
+      "libraryId": "1kzzYZhgODZluRmjsjh7t3O-ftmFAF9h1jaRHU0rOdf9irF0VUiJW33Kt",
+      "version": "10"
     }]
   },
   "exceptionLogging": "STACKDRIVER"
