--- a/appsscript.json
+++ b/appsscript.json
@@ -1,5 +1,5 @@
 {
-  "timeZone": "Europe/London",
+  "timeZone": "America/Chicago",
   "dependencies": {
     "libraries": [{
       "userSymbol": "Assert",
