--- a/appsscript.json
+++ b/appsscript.json
@@ -1,10 +1,18 @@
 {
-  "timeZone": "America/Mexico_City",
+  "timeZone": "America/Chicago",
   "dependencies": {
     "libraries": [{
-      "userSymbol": "PL",
-      "libraryId": "1y9ackD7MdSsUkiGd1Au7DvkAgYRn7vkraabnwv12WvIj9YEK1579k48F",
-      "version": "12"
+      "userSymbol": "BBLog",
+      "libraryId": "1kzzYZhgODZluRmjsjh7t3O-ftmFAF9h1jaRHU0rOdf9irF0VUiJW33Kt",
+      "version": "13"
+    }, {
+      "userSymbol": "Config",
+      "libraryId": "1oO44r3nax5MO1XsI1hlr4ZM0OtPVCQKgDYUe08ej_SkIKn9uvzZ6WKQl",
+      "version": "7"
+    }, {
+      "userSymbol": "Assert",
+      "libraryId": "1R-rxUHuQU0ez95FlZz9fxqifbYFszHnukqzv_3Uk5zM3eG4eRBrh_E1M",
+      "version": "16"
     }]
   },
   "exceptionLogging": "STACKDRIVER"
