--- a/appsscript.json
+++ b/appsscript.json
@@ -6,6 +6,10 @@
       "libraryId": "1kzzYZhgODZluRmjsjh7t3O-ftmFAF9h1jaRHU0rOdf9irF0VUiJW33Kt",
       "version": "13"
     }, {
+      "userSymbol": "Config",
+      "libraryId": "1oO44r3nax5MO1XsI1hlr4ZM0OtPVCQKgDYUe08ej_SkIKn9uvzZ6WKQl",
+      "version": "7"
+    }, {
       "userSymbol": "Assert",
       "libraryId": "1R-rxUHuQU0ez95FlZz9fxqifbYFszHnukqzv_3Uk5zM3eG4eRBrh_E1M",
       "version": "16"
